--- a/Java/springboot-demo3/src/main/resources/application.properties
+++ b/Java/springboot-demo3/src/main/resources/application.properties
@@ -1,4 +1,14 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/51456test
+mybatis.type-aliases-package=com.example.springbootdemo3
+spring.datasource.url = jdbc:mysql://localhost:3306/test
 spring.datasource.username = root
 spring.datasource.password = 123456
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
+
+com.neo.title=纯洁的微笑
+com.neo.description=分享生活和技术
+
+com.didispace.blog.name=程序猿DD
+com.didispace.blog.title=Spring Boot教程
+
+
+
